# mltradingbot

./: .env.example  .replit  README.md  analyze_simulation.py  best_model.h5  clean_models.py  environment_setup.py  main.py  pyproject.toml  replit.nix  setup_test_env.py  simulation_results.csv  test_api_connectivity.py  test_requirements.txt  test_trading_loop.py  trading_bot.log.1  trading_bot.log.2  trading_bot.log.3  trading_bot.log.4  trading_bot.log.5
data/: config_state.json
deriv_bot/: __init__.py
deriv_bot/config/: model_config.py
deriv_bot/data/: data_fetcher.py  data_processor.py  deriv_connector.py
deriv_bot/execution/: order_executor.py  order_manager.py
deriv_bot/monitor/: logger.py  notifier.py  performance.py
deriv_bot/risk/: position_sizer.py  risk_manager.py  risk_validator.py
deriv_bot/strategy/: feature_engineering.py  model_evaluator.py  model_predictor.py  model_trainer.py  strategy_executor.py
deriv_bot/utils/: asset_selector.py  config.py  model_manager.py
deriv_bot/validation/: price_validator.py
docs/: INSTALLATION.md  README.md  api_reference.md  environment.md
docs/en/: README.md  api_reference.md  configuration.md  contributing.md  data_management.md  development.md  error_handling.md  model_architecture.md  model_maintenance.md  model_management.md  quickstart.md  risk_management.md  system_requirements.md  trading.md  troubleshooting.md  websocket.md
docs/es/: README.md  configuration.md  installation.md  model_architecture.md  model_management.md  (+2 more)
tests/: test_asset_selector.py  test_data.py  test_strategy.py
